# Strafe

./: CMakeLists.txt  README.md  Strafe
.cache/clangd/index/: app.cpp.ABF0D8C3A3FA52D3.idx  app.h.E0D1775F61737504.idx  application.cpp.2DAC2A1ED068072C.idx  application.h.789A3A5D94A7922D.idx  glfw.cpp.AF26D6E1231F1EEF.idx  glfw.h.B21FCFAAF1491928.idx  main.cpp.5065D6ED4B8A93B0.idx
shaders/: brdf.frag  brdf.vert  cubemap.vert  equirect_to_cube.frag  irradiance.frag  main.frag  main.vert  pbr.frag  pbr.vert  prefilter.frag  skybox.frag  skybox.vert
shaders/compiled/: brdf.frag.spv  cubemap.vert.spv  equirect_to_cube.frag.spv  irradiance.frag.spv  main.frag.spv  main.vert.spv  pbr.frag.spv  pbr.vert.spv  prefilter.frag.spv  skybox.frag.spv  skybox.vert.spv
src/: app.cpp  app.h  asset_manager.cpp  asset_manager.h  camera.cpp  camera.h  commands.cpp  commands.h  cubemap.cpp  cubemap.h  device.cpp  device.h  glfw.cpp  glfw.h  imgui_manager.cpp  imgui_manager.h  instance.cpp  instance.h  main.cpp  mesh.cpp  mesh.h  pipeline.cpp  pipeline.h  scene.cpp  scene.h  swapchain.cpp  swapchain.h  texture.cpp  texture.h  theme.h  vk_manager.cpp  vk_manager.h
src/VulkanBackend/: commands.cpp  commands.h  device.cpp  device.h  memory.cpp  memory.h  pipeline.cpp  pipeline.h  swapchain.cpp  swapchain.h  sync.cpp  sync.h
